Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-05-15 (SVN):
    * in_sdl.c: Added cvar callback functions IN_Callback_JoyEnable()
      and IN_Callback_JoyIndex(). We now keep only one joystick open
      and only if the functionality is enabled.

2012-05-15 (SVN):
    * sys_osx.m: Added missing include for unistd.h.

2012-05-15 (SVN):
    * Xcode project file update from Levent for Mac OS X.

2012-05-15 (SVN):
    * Added SDL joystick (gamepad) support. New cvars are documented in
      the README file. The code is based on darkplaces (svn rev.10980.)

2012-05-11 (SVN):
    * Updated documentation, mentioning and adding links to the RISC OS
      port of uhexen2.

2012-05-11 (SVN):
    * utils/dcc/dcc.c: When decompiling the progs.dat of the hcbots mod,
      GetFieldFunctionHeader() goes into an infinite recursion by calling
      itself with "think" and "th_stand" as the arguments alternating
      between each succession. So I just added a MAX_DEPTH check at the
      function's entrance, which works around the problem. It is a stupid
      solution yes, but I don't have anything better so far.
    * updated version date stamp to 2012-05-11.

2012-05-10 (SVN):
    * utils/dcc/hcc.c: Cleaned up the -src command line option handling.
    * utils/dcc/hcc.c: Made -src command line option behave the same in
      dhcc as in hcc itself.

2012-05-09 (SVN):
    * utils/dcc/hcc.c (PR_DefForFieldOfs): Made the typecast comparison
      more aliasing-friendly.

2012-05-09 (SVN):
    * utils/dcc/dcc.c (DEC_ReadData): Assign and print the globals before
      reading the progs.
    * utils/dcc/hcc.c: Remove the useless -crc command line option.

2012-05-09 (SVN):
    * utils/dcc/dcc.c: Made DEC_GetFunctionIdxByName to actually be able
      return 0: It used to return the numfunctions value when it failed
      to find a match. GetReturnType and GetLastFunctionReturn do check