@@ -4,6 +4,11 @@ Development Progress	:
 ---------------------------
 
 2012-05-15 (SVN):
+    * cvar.c: Added a note that not doing anything upon no change in
+      the Cvar_Set*() functions is a behavior which the cvar callbacks
+      may be relying upon.
+
+2012-05-15 (SVN):
     * in_sdl.c: Added cvar callback functions IN_Callback_JoyEnable()
       and IN_Callback_JoyIndex(). We now keep only one joystick open
       and only if the functionality is enabled.
